removed placeholder elements, changed links to redirect to contact page

--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,9 @@
       <footer id="footer">
         <ul class="icons">
           <li>
-            <a href="#" class="icon brands circle fa-twitter"
+            <a
+              href="https://twitter.com/bonifacio_chris"
+              class="icon brands circle fa-twitter"
               ><span class="label">Twitter</span></a
             >
           </li>
@@ -110,20 +112,24 @@
             >
           </li>
           <li>
-            <a href="#" class="icon brands circle fa-google-plus-g"
-              ><span class="label">Google+</span></a
+            <a
+              href="mailto:christopher.bonifacio@gmail.com"
+              class="icon brands circle fa-google"
+              ><span class="label">Google</span></a
             >
           </li>
           <li>
-            <a href="#" class="icon brands circle fa-github"
+            <a
+              href="https://github.com/chrisbonifacio"
+              class="icon brands circle fa-github"
               ><span class="label">Github</span></a
             >
           </li>
-          <li>
+          <!-- <li>
             <a href="#" class="icon brands circle fa-dribbble"
               ><span class="label">Dribbble</span></a
             >
-          </li>
+          </li> -->
         </ul>
 
         <ul class="copyright">
