--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Twenty by HTML5 UP</title>
+    <title>Chris Bonifacio</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -28,11 +28,13 @@
             <li class="submenu">
               <a href="#">Projects</a>
               <ul>
-                <li><a href="left-sidebar.html">Left Sidebar</a></li>
-                <li><a href="right-sidebar.html">Right Sidebar</a></li>
-                <li><a href="no-sidebar.html">No Sidebar</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li class="submenu">
+                <li><a href="left-sidebar.html">User Interface - Fixed</a></li>
+                <li>
+                  <a href="right-sidebar.html">Great Idea - Responsive</a>
+                </li>
+                <!-- <li><a href="no-sidebar.html">No Sidebar</a></li>
+                 <li><a href="contact.html">Contact</a></li>
+                 <li class="submenu">
                   <a href="#">Submenu</a>
                   <ul>
                     <li><a href="#">Dolore Sed</a></li>
@@ -41,7 +43,7 @@
                     <li><a href="#">Sed Magna</a></li>
                     <li><a href="#">Ipsum Nisl</a></li>
                   </ul>
-                </li>
+                </li> -->
               </ul>
             </li>
             <!-- <li><a href="#" class="button primary">Sign Up</a></li> -->
@@ -65,9 +67,7 @@
           <footer>
             <ul class="buttons stacked">
               <li>
-                <a href="#main" class="button fit scrolly"
-                  >Learn More About Me</a
-                >
+                <a href="#main" class="button fit scrolly">About Me</a>
               </li>
             </ul>
           </footer>
@@ -76,7 +76,7 @@
 
       <!-- Main -->
       <article id="main">
-        <header class="special container">
+        <!-- <header class="special container">
           <span class="icon solid fa-chart-bar"></span>
           <h2>
             As this is my <strong>twentieth</strong> freebie for HTML5 UP
@@ -96,10 +96,10 @@
             >
             license. Have fun!
           </p>
-        </header>
+        </header> -->
 
         <!-- One -->
-        <section class="wrapper style2 container special-alt">
+        <!-- <section class="wrapper style2 container special-alt">
           <div class="row gtr-50">
             <div class="col-8 col-12-narrower">
               <header>
@@ -156,7 +156,7 @@
               </ul>
             </div>
           </div>
-        </section>
+        </section> -->
 
         <!-- Two -->
         <section class="wrapper style1 container special">
@@ -215,10 +215,11 @@
                 <a
                   href="https://ui-sprint-project.netlify.com/"
                   class="image featured"
+                  target="_blank"
                   ><img src="images/sprint-project.png" alt=""
                 /></a>
                 <header>
-                  <h3>Responsive Project</h3>
+                  <h3>Great Idea Project - Responsive</h3>
                 </header>
                 <p>
                   This is a project I did during my time at Lambda School. I
@@ -234,10 +235,11 @@
                 <a
                   href="https://responsive-web-design1.netlify.com/"
                   class="image featured"
+                  target="_blank"
                   ><img src="images/responsive-project.png" alt=""
                 /></a>
                 <header>
-                  <h3>Great Idea Project</h3>
+                  <h3>User Interface - Fixed</h3>
                 </header>
                 <p>
                   This is a project at Lambda School that taught the
@@ -295,15 +297,17 @@
       <!-- CTA -->
       <section id="cta">
         <header>
-          <h2>Ready to do <strong>something</strong>?</h2>
+          <h2>Let's Get In <strong>Touch</strong></h2>
           <p>
-            Proin a ullamcorper elit, et sagittis turpis integer ut fermentum.
+            Like my work? Let me know!
           </p>
         </header>
         <footer>
           <ul class="buttons">
-            <li><a href="#" class="button primary">Take My Money</a></li>
-            <li><a href="#" class="button">LOL Wut</a></li>
+            <li>
+              <a href="contact.html" class="button primary">Contact Me</a>
+            </li>
+            <!-- <li><a href="#" class="button">Learn More</a></li> -->
           </ul>
         </footer>
       </section>
@@ -337,11 +341,11 @@
               ><span class="label">Github</span></a
             >
           </li>
-          <li>
+          <!-- <li>
             <a href="#" class="icon brands circle fa-dribbble"
               ><span class="label">Dribbble</span></a
             >
-          </li>
+          </li> -->
         </ul>
 
         <ul class="copyright">
