changed Projects dropdown links to move page to projects

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <li class="submenu">
               <a href="#">Projects</a>
               <ul>
-                <li><a href="left-sidebar.html">User Interface - Fixed</a></li>
+                <li><a href="#User-Interface">User Interface - Fixed</a></li>
                 <li>
-                  <a href="right-sidebar.html">Great Idea - Responsive</a>
+                  <a href="#Great-Idea">Great Idea - Responsive</a>
                 </li>
                 <!-- <li><a href="no-sidebar.html">No Sidebar</a></li>
                  <li><a href="contact.html">Contact</a></li>
@@ -211,7 +211,7 @@
 
           <div class="row">
             <div class="col-6 col-12-narrower">
-              <section>
+              <section id="Great-Idea">
                 <a
                   href="https://ui-sprint-project.netlify.com/"
                   class="image featured"
@@ -231,7 +231,7 @@
               </section>
             </div>
             <div class="col-6 col-12-narrower">
-              <section>
+              <section id="User-Interface">
                 <a
                   href="https://responsive-web-design1.netlify.com/"
                   class="image featured"
