added scrolly class to Projects dropdown links for smooth scroll effect

--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
             <li class="submenu">
               <a href="#">Projects</a>
               <ul>
-                <li><a href="#User-Interface">User Interface - Fixed</a></li>
                 <li>
-                  <a href="#Great-Idea">Great Idea - Responsive</a>
+                  <a href="#User-Interface" class="scrolly"
+                    >User Interface - Fixed</a
+                  >
+                </li>
+                <li>
+                  <a href="#Great-Idea" class="scrolly"
+                    >Great Idea - Responsive</a
+                  >
                 </li>
                 <!-- <li><a href="no-sidebar.html">No Sidebar</a></li>
                  <li><a href="contact.html">Contact</a></li>
