added custom font-awesome icons

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css"/></noscript>
+    <script src="https://kit.fontawesome.com/eb928705cc.js"></script>
   </head>
   <body class="index is-preload">
     <div id="page-wrapper">
@@ -169,7 +170,7 @@
           <div class="row">
             <div class="col-4 col-12-narrower">
               <section>
-                <span class="icon solid featured fa-check"></span>
+                <span class="icon solid featured fas fa-code"></span>
                 <header>
                   <h3>HTML, CSS, JS</h3>
                 </header>
@@ -182,7 +183,7 @@
             </div>
             <div class="col-4 col-12-narrower">
               <section>
-                <span class="icon solid featured fa-check"></span>
+                <span class="icon solid featured fab fa-react"></span>
                 <header>
                   <h3>React, Angular</h3>
                 </header>
@@ -195,7 +196,7 @@
             </div>
             <div class="col-4 col-12-narrower">
               <section>
-                <span class="icon solid featured fa-check"></span>
+                <span class="icon solid featured fab fa-node-js"></span>
                 <header>
                   <h3>Node.js</h3>
                 </header>
