--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
               <section>
                 <span class="icon solid featured fab fa-react"></span>
                 <header>
-                  <h3>React, Angular</h3>
+                  <h3>React</h3>
                 </header>
                 <p>
                   Sed tristique purus vitae volutpat ultrices. Aliquam eu elit
