created nav link to resume page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         </h1>
         <nav id="nav">
           <ul>
-            <li class="current"><a href="index.html">Welcome</a></li>
+            <li class="current">
+              <a href="https://chrisb-resume.netlify.com/index.html">Resume</a>
+            </li>
             <li class="submenu">
               <a href="#">Projects</a>
               <ul>
