--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,9 @@
         </h1>
         <nav id="nav">
           <ul>
-            <li class="current"><a href="index.html">Welcome</a></li>
+            <li class="current">
+              <a href="https://chrisb-resume.netlify.com/index.html">Resume</a>
+            </li>
             <li class="submenu">
               <a href="#">Layouts</a>
               <ul>
