changed header about me link to resume page

--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
           <footer>
             <ul class="buttons stacked">
               <li>
-                <a href="#main" class="button fit scrolly">About Me</a>
+                <a
+                  href="https://chrisb-resume.netlify.com/index.html"
+                  class="button fit scrolly"
+                  >About Me</a
+                >
               </li>
             </ul>
           </footer>
