--- a/index.html
+++ b/index.html
@@ -235,11 +235,10 @@
                   <h3>Great Idea Project - Responsive</h3>
                 </header>
                 <p>
-                  This is a project I did during my time at Lambda School. I
-                  learned how to create a responsive website using flexbox and
-                  media queries. During this project we were also taught how to
-                  use version control with Git in order to save snapshots of our
-                  code as well as upload it to Github as a repository.
+                  I learned how to create a responsive website using flexbox and
+                  media queries. During this project I became familiar with how
+                  to use version control with Git in order to save snapshots of
+                  our code as well as upload it to Github as a repository.
                 </p>
               </section>
             </div>
@@ -249,17 +248,46 @@
                   href="https://ui-sprint-project.netlify.com/"
                   class="image featured"
                   target="_blank"
-                  ><img src="images/responsive-project.png" alt=""
+                  ><img
+                    src="images/responsive-project.png"
+                    alt="Sprint Project screenshot"
                 /></a>
                 <header>
-                  <h3>User Interface - Fixed</h3>
+                  <h3>User Interface - Sprint Project</h3>
                 </header>
                 <p>
-                  This is a project at Lambda School that taught the
-                  fundamentals of The Box Model in HTML as well as how to
-                  manipulate it with CSS to achieve a clean layout. I also
-                  learned how to write Semantic HTML to help browsers and search
-                  engines understand the parts of the page that are important.
+                  This is a timed three hour project at Lambda School that
+                  taught the fundamentals of The Box Model in HTML as well as
+                  how to manipulate it with CSS to achieve a clean layout. I
+                  also learned how to write Semantic HTML to help browsers and
+                  search engines understand the parts of the page that are
+                  important.
+                </p>
+              </section>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6 col-12-narrower">
+              <section id="Youtube-U">
+                <a
+                  href="https://youtube-u.netlify.com/"
+                  class="image featured"
+                  target="_blank"
+                  ><img
+                    src="images/buildweek1-project.png"
+                    alt="Youtube U screenshot"
+                /></a>
+                <header>
+                  <h3>Youtube U - Build Week Project</h3>
+                </header>
+                <p>
+                  My team consisted of Web UI, React, Back End, Machine
+                  Learning, and Data Science engineers. With such a diverse
+                  group of skillsets our goal is to create an application that
+                  would allow users to simply enter a topic they're interested
+                  in learning. We would then filter through the Youtube API for
+                  the most relevant videos, and provide the user with a playlist
+                  of videos conducive to learning more about the topic.
                 </p>
               </section>
             </div>
