added youtube-u to nav bar

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                     >Great Idea - Responsive</a
                   >
                 </li>
+                <li>
+                  <a href="#Youtube-U" class="scrolly"
+                    >Youtube U - Build Week</a
+                  >
+                </li>
                 <!-- <li><a href="no-sidebar.html">No Sidebar</a></li>
                  <li><a href="contact.html">Contact</a></li>
                  <li class="submenu">
