--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
             <li class="current">
               <a href="https://chrisb-resume.netlify.com/index.html">Resume</a>
             </li>
-            <li class="submenu">
+            <!-- <li class="submenu">
               <a href="#">Layouts</a>
               <ul>
                 <li><a href="left-sidebar.html">Left Sidebar</a></li>
@@ -45,8 +45,8 @@
                   </ul>
                 </li>
               </ul>
-            </li>
-            <li><a href="#" class="button primary">Sign Up</a></li>
+            </li> -->
+            <!-- <li><a href="#" class="button primary">Sign Up</a></li> -->
           </ul>
         </nav>
       </header>
