added recent projects

--- a/index.html
+++ b/index.html
@@ -296,6 +296,56 @@
                 </p>
               </section>
             </div>
+            <div class="col-6 col-12-narrower">
+              <section id="Rick-and-Morty">
+                <a
+                  href="https://rm-fanpage.now.sh/"
+                  class="image featured"
+                  target="_blank"
+                  ><img
+                    src="images/rick-and-morty.png"
+                    alt="Youtube U screenshot"
+                /></a>
+                <header>
+                  <h3>Rick and Morty API Project</h3>
+                </header>
+                <p>
+                  This is a project build in React in under 3 hours using the
+                  <a target="_blank" href="https://rickandmortyapi.com/"
+                    >Rick and Morty API</a
+                  >. With this project I learned how to use component libraries
+                  for React like Semantic UI as well as making asynchronous
+                  calls to an API and rendering data the application recieves as
+                  a response.
+                </p>
+              </section>
+              https://anime-redux.now.sh/
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6 col-12-narrower">
+              <section id="Anime-Redux">
+                <a
+                  href="https://anime-redux.now.sh/"
+                  class="image featured"
+                  target="_blank"
+                  ><img src="images/anime-redux.png" alt="Anime Redux"
+                /></a>
+                <header>
+                  <h3>Anime Redux Project</h3>
+                </header>
+                <p>
+                  This project was built in React using the
+                  <a
+                    target="_blank"
+                    href="https://jikan.docs.apiary.io/#reference/0/anime"
+                    >Jikan API</a
+                  >. During this project I learned how to implement Redux as a
+                  state management system with middleware like thunk to be able
+                  to dispatch asynchronous actions.
+                </p>
+              </section>
+            </div>
           </div>
           <!-- <div class="row">
             <div class="col-6 col-12-narrower">
