add tipsease build week project

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                   target="_blank"
                   ><img
                     src="images/rick-and-morty.png"
-                    alt="Youtube U screenshot"
+                    alt="Rick and Morty Project"
                 /></a>
                 <header>
                   <h3>Rick and Morty API Project</h3>
@@ -343,6 +343,30 @@
                   >. During this project I learned how to implement Redux as a
                   state management system with middleware like thunk to be able
                   to dispatch asynchronous actions.
+                </p>
+              </section>
+            </div>
+            <div class="col-6 col-12-narrower">
+              <section id="Tipsease">
+                <a
+                  href="https://tipsease.now.sh/"
+                  class="image featured"
+                  target="_blank"
+                  ><img src="images/tipsease.png" alt="Tipsease"
+                /></a>
+                <header>
+                  <h3>Tipsease Build Week Project</h3>
+                </header>
+                <p>
+                  This project was built in React using Redux as the state
+                  management system. A backend API was built in Node.js to
+                  provide endpoints for the frontend to make GET and PUT
+                  requests to render a list of users and update user profiles
+                  respectively after a user has created a profile through the
+                  site's onboarding form. Once a profile is created, the user
+                  can successfully login, choose a service worker, and give them
+                  a tip. An account with a status of 'Service Worker' can login
+                  to see what tips they have recieved.
                 </p>
               </section>
             </div>
