--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css"/></noscript>
+    <noscript
+      ><link rel="stylesheet" href="assets/css/noscript.css"
+    /></noscript>
     <script src="https://kit.fontawesome.com/eb928705cc.js"></script>
   </head>
   <body class="index is-preload">
@@ -186,9 +188,7 @@
                   <h3>HTML, CSS, JS</h3>
                 </header>
                 <p>
-                  Sed tristique purus vitae volutpat ultrices. Aliquam eu elit
-                  eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper
-                  elit, et sagittis turpis. Integer ut fermentum.
+                  Sass/SCSS & LESS, Vanilla JS, jQuery, Responsive Design
                 </p>
               </section>
             </div>
@@ -199,9 +199,7 @@
                   <h3>React</h3>
                 </header>
                 <p>
-                  Sed tristique purus vitae volutpat ultrices. Aliquam eu elit
-                  eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper
-                  elit, et sagittis turpis. Integer ut fermentum.
+                  React.js, Redux, Context API & Hooks, React Router
                 </p>
               </section>
             </div>
@@ -212,9 +210,7 @@
                   <h3>Node.js</h3>
                 </header>
                 <p>
-                  Sed tristique purus vitae volutpat ultrices. Aliquam eu elit
-                  eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper
-                  elit, et sagittis turpis. Integer ut fermentum.
+                  Express, Knex, MongoDB, PostgreSQL
                 </p>
               </section>
             </div>
@@ -231,98 +227,84 @@
             <div class="col-6 col-12-narrower">
               <section id="Great-Idea">
                 <a
-                  href="https://responsive-web-design1.netlify.com/"
-                  class="image featured"
-                  target="_blank"
-                  ><img src="images/sprint-project.png" alt=""
-                /></a>
-                <header>
-                  <h3>Great Idea Project - Responsive</h3>
-                </header>
-                <p>
-                  I learned how to create a responsive website using flexbox and
-                  media queries. During this project I became familiar with how
-                  to use version control with Git in order to save snapshots of
-                  our code as well as upload it to Github as a repository.
-                </p>
-              </section>
-            </div>
-            <div class="col-6 col-12-narrower">
-              <section id="User-Interface">
-                <a
-                  href="https://ui-sprint-project.netlify.com/"
+                  href="https://www.futurehopeschool.com/"
                   class="image featured"
                   target="_blank"
                   ><img
-                    src="images/responsive-project.png"
-                    alt="Sprint Project screenshot"
+                    src="images/future-hope.png"
+                    alt="Future Hope - School in the Sky"
                 /></a>
                 <header>
-                  <h3>User Interface - Sprint Project</h3>
+                  <h3>Future Hope - School in the Sky</h3>
                 </header>
                 <p>
-                  This is a timed three hour project at Lambda School that
-                  taught the fundamentals of The Box Model in HTML as well as
-                  how to manipulate it with CSS to achieve a clean layout. I
-                  also learned how to write Semantic HTML to help browsers and
-                  search engines understand the parts of the page that are
-                  important.
+                  Training Portal built to help provide virtual mentors to
+                  students in Ghana and Nigeria.
+                  <ul style="text-align: left;">
+                    <li>Managed tasks associated with developing, debugging, and
+                    designing the application according to stakeholder
+                    specifications</li>
+                    <li>
+                      Built with React, Redux & Google Firebase. Tested with Cypress.io
+                    </li>
+                  </ul>
                 </p>
               </section>
             </div>
-          </div>
-          <div class="row">
             <div class="col-6 col-12-narrower">
               <section id="Youtube-U">
-                <a
-                  href="https://youtube-u.netlify.com/"
-                  class="image featured"
-                  target="_blank"
-                  ><img
-                    src="images/buildweek1-project.png"
-                    alt="Youtube U screenshot"
-                /></a>
+                <a href="https://sneakers.now.sh/sneakers" class="image featured" target="_blank"><img
+                    src="images/sneakers.png" alt="Sneakers E-Commerce Website" /></a>
                 <header>
-                  <h3>Youtube U - Build Week Project</h3>
+                  <h3>Kicks</h3>
                 </header>
                 <p>
-                  My team consisted of Web UI, React, Back End, Machine
-                  Learning, and Data Science engineers. With such a diverse
-                  group of skillsets our goal is to create an application that
-                  would allow users to simply enter a topic they're interested
-                  in learning. We would then filter through the Youtube API for
-                  the most relevant videos, and provide the user with a playlist
-                  of videos conducive to learning more about the topic.
+                  UI model for an online sneaker store. Data pulled from The Sneaker API, a free resource created and maintained by TG4 Solutions.
+                  <ul style="text-align: left;">
+                    <li>Developed solely by me as a personal project to practice client side routing and state management</li>
+                    <li>Built with React, Hooks & Context API, React Router</li>
+                  </ul>
+                </p>
+              </section>
+            </div>
+            
+          <div class="row">
+            <div class="col-6 col-12-narrower">
+              <section id="User-Interface">
+                <a href="https://dungeon-of-the-haunted-forest.netlify.app/" class="image featured" target="_blank"><img
+                    src="images/haunted.png" alt="Dungeon of the Haunted Forest Website" /></a>
+                <header>
+                  <h3>Dungeon of the Haunted Forest</h3>
+                </header>
+                <p>
+                  A MUD game where users can sign up and fight their way through a spooky forest!
+                  <ul style="text-align: left;">
+                    <li>Using Depth First Search, developed an algorithm to generate a game map from a list of rooms</li>
+                    <li>Front end built with React, Context API, React Router. Backend is written in Python with Django</li>
+                  </ul>
                 </p>
               </section>
             </div>
             <div class="col-6 col-12-narrower">
               <section id="Rick-and-Morty">
-                <a
-                  href="https://rm-fanpage.now.sh/"
-                  class="image featured"
-                  target="_blank"
-                  ><img
-                    src="images/rick-and-morty.png"
-                    alt="Rick and Morty Project"
-                /></a>
+                <a href="https://rm-fanpage.now.sh/" class="image featured" target="_blank"><img style="max-height: 280px;" src="images/rick-and-morty.png"
+                    alt="Rick and Morty Project" /></a>
                 <header>
                   <h3>Rick and Morty API Project</h3>
                 </header>
                 <p>
-                  This is a project build in React in under 3 hours using the
-                  <a target="_blank" href="https://rickandmortyapi.com/"
-                    >Rick and Morty API</a
-                  >. With this project I learned how to use component libraries
-                  for React like Semantic UI as well as making asynchronous
-                  calls to an API and rendering data the application recieves as
-                  a response.
+                  A React Sprint Challenge done while attending Lambda School's curriculum for Full Stack Web Development.
+                  <ul style="text-align: left;">
+                    <li>Developed under 3 hours as a challenge to build and connect a client to a RESTful API</li>
+                    <li>Built with React, React Router & Semantic UI</li>
+                  </ul>
                 </p>
               </section>
-              https://anime-redux.now.sh/
             </div>
-          </div>
-          <div class="row">
+            </div>
+            </div>
+            
+          <!-- <div class="row">
             <div class="col-6 col-12-narrower">
               <section id="Anime-Redux">
                 <a
@@ -370,7 +352,7 @@
                 </p>
               </section>
             </div>
-          </div>
+          </div> -->
           <!-- <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
