remove facebook button

--- a/index.html
+++ b/index.html
@@ -31,36 +31,7 @@
               <a href="https://chrisb-resume.netlify.com/index.html">Resume</a>
             </li>
             <li class="submenu">
-              <a href="#">Projects</a>
-              <ul>
-                <li>
-                  <a href="#User-Interface" class="scrolly"
-                    >User Interface - Fixed</a
-                  >
-                </li>
-                <li>
-                  <a href="#Great-Idea" class="scrolly"
-                    >Great Idea - Responsive</a
-                  >
-                </li>
-                <li>
-                  <a href="#Youtube-U" class="scrolly"
-                    >Youtube U - Build Week</a
-                  >
-                </li>
-                <!-- <li><a href="no-sidebar.html">No Sidebar</a></li>
-                 <li><a href="contact.html">Contact</a></li>
-                 <li class="submenu">
-                  <a href="#">Submenu</a>
-                  <ul>
-                    <li><a href="#">Dolore Sed</a></li>
-                    <li><a href="#">Consequat</a></li>
-                    <li><a href="#">Lorem Magna</a></li>
-                    <li><a href="#">Sed Magna</a></li>
-                    <li><a href="#">Ipsum Nisl</a></li>
-                  </ul>
-                </li> -->
-              </ul>
+              <a href="#projects" class="scrolly">Projects</a>
             </li>
             <!-- <li><a href="#" class="button primary">Sign Up</a></li> -->
           </ul>
@@ -218,7 +189,7 @@
         </section>
 
         <!-- Three -->
-        <section class="wrapper style3 container special">
+        <section id="projects" class="wrapper style3 container special">
           <header class="major">
             <h2>Check out these <strong>Projects</strong></h2>
           </header>
@@ -424,11 +395,11 @@
               ><span class="label">Twitter</span></a
             >
           </li>
-          <li>
+          <!-- <li>
             <a href="#" class="icon brands circle fa-facebook-f"
               ><span class="label">Facebook</span></a
             >
-          </li>
+          </li> -->
           <li>
             <a
               href="mailto:christopher.bonifacio@gmail.com"
