--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,9 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css"/></noscript>
+    <noscript
+      ><link rel="stylesheet" href="assets/css/noscript.css"
+    /></noscript>
   </head>
   <body class="contact is-preload">
     <div id="page-wrapper">
@@ -108,11 +110,11 @@
               ><span class="label">Twitter</span></a
             >
           </li>
-          <li>
+          <!-- <li>
             <a href="#" class="icon brands circle fa-facebook-f"
               ><span class="label">Facebook</span></a
             >
-          </li>
+          </li> -->
           <li>
             <a
               href="mailto:christopher.bonifacio@gmail.com"
