--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         <nav id="nav">
           <ul>
             <li class="current">
-              <a href="https://chrisb-resume.netlify.com/index.html">Resume</a>
+              <a href="/resume.html">Resume</a>
             </li>
             <!-- <li class="submenu">
               <a href="#">Layouts</a>
