--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav id="nav">
           <ul>
             <li class="current">
-              <a href="https://chrisb-resume.netlify.com/index.html">Resume</a>
+              <a href="/resume.html">Resume</a>
             </li>
             <li class="submenu">
               <a href="#projects" class="scrolly">Projects</a>
@@ -55,7 +55,7 @@
             <ul class="buttons stacked">
               <li>
                 <a
-                  href="https://chrisb-resume.netlify.com/index.html"
+                  href="/resume.html"
                   class="button fit scrolly"
                   >About Me</a
                 >
