remove 'see more'

--- a/index.html
+++ b/index.html
@@ -359,11 +359,11 @@
             </div>
           </div> -->
 
-          <footer class="major">
+          <!-- <footer class="major">
             <ul class="buttons">
               <li><a href="#" class="button">See More</a></li>
             </ul>
-          </footer>
+          </footer> -->
         </section>
       </article>
 
