--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
         <section class="wrapper style4 special container medium">
           <!-- Content -->
           <div class="content">
-            <form>
+            <form netlify>
               <div class="row gtr-50">
                 <div class="col-6 col-12-mobile">
                   <input type="text" name="name" placeholder="Name" />
