--- a/contact.html
+++ b/contact.html
@@ -65,22 +65,33 @@
         <section class="wrapper style4 special container medium">
           <!-- Content -->
           <div class="content">
-            <form netlify>
+            <form method="POST" data-netlify="true">
               <div class="row gtr-50">
                 <div class="col-6 col-12-mobile">
-                  <input type="text" name="name" placeholder="Name" />
+                  <input type="text" name="name" placeholder="Name" required />
                 </div>
                 <div class="col-6 col-12-mobile">
-                  <input type="text" name="email" placeholder="Email" />
+                  <input
+                    type="email"
+                    name="email"
+                    placeholder="Email"
+                    required
+                  />
                 </div>
                 <div class="col-12">
-                  <input type="text" name="subject" placeholder="Subject" />
+                  <input
+                    type="text"
+                    name="subject"
+                    placeholder="Subject"
+                    required
+                  />
                 </div>
                 <div class="col-12">
                   <textarea
                     name="message"
                     placeholder="Message"
                     rows="7"
+                    required
                   ></textarea>
                 </div>
                 <div class="col-12">
