change verbiage on contact page

--- a/contact.html
+++ b/contact.html
@@ -57,8 +57,8 @@
       <article id="main">
         <header class="special container">
           <span class="icon solid fa-envelope"></span>
-          <h2>Get In Touch</h2>
-          <p>Use the form below to give /dev/null a piece of your mind.</p>
+          <h2>Let's Work Together!</h2>
+          <p>Use the form below to get in touch with me.</p>
         </header>
 
         <!-- One -->
