--- a/index.html
+++ b/index.html
@@ -46,13 +46,17 @@
 						automatically wrap lines, so be sure to use line breaks where
 						appropriate (<br />).
 					-->
-        <div class="inner">
+        <div class="inner" style="max-width: 650px;">
           <header>
             <h2>CHRIS B.</h2>
           </header>
+          <img class="profile-photo" src="/images/profile.png"/>
           <p>Full Stack <strong>Developer</strong></p>
           <footer>
-            <ul class="buttons stacked">
+            <p style="font-weight: 500; text-transform: none;">
+              Full Stack Web Developer with 3 years of experience building interactive and responsive User Interfaces and RESTful APIs to connect them to.
+            </p>
+            <!-- <ul class="buttons stacked">
               <li>
                 <a
                   href="/resume.html"
@@ -60,7 +64,7 @@
                   >About Me</a
                 >
               </li>
-            </ul>
+            </ul> -->
           </footer>
         </div>
       </section>
